--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -6,7 +6,7 @@
 #    By: kafortin <kafortin@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/04/05 20:32:19 by kafortin          #+#    #+#              #
-#    Updated: 2023/03/13 15:42:03 by kafortin         ###   ########.fr        #
+#    Updated: 2023/03/14 17:12:39 by kafortin         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -59,6 +59,7 @@ FILES = ft_isalpha.c \
 		search_and_replace.c \
 		get_next_line.c \
 		get_next_line_utils.c \
+		ft_free_tab.c \
 		
 OBJS = $(FILES:.c=.o)
 
